@@ -1,9 +1,9 @@
-/*	$NetBSD: cgi-bozo.c,v 1.20.14.3 2016/04/15 20:16:24 mrg Exp $	*/
+/*	$NetBSD: cgi-bozo.c,v 1.20.14.4 2017/03/07 07:21:53 snj Exp $	*/
 
 /*	$eterna: cgi-bozo.c,v 1.40 2011/11/18 09:21:15 mrg Exp $	*/
 
 /*
- * Copyright (c) 1997-2015 Matthew R. Green
+ * Copyright (c) 1997-2017 Matthew R. Green
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -235,7 +235,8 @@ parse_search_string(bozo_httpreq_t *request, const char *query, size_t *args_len
 	 */
 	*args_len = 1;
 	/* count '+' in str */
-	for (s = str; (s = strchr(s, '+')); (*args_len)++);
+	for (s = str; (s = strchr(s, '+')); (*args_len)++)
+		s++;
 	
 	args = bozomalloc(httpd, sizeof(*args) * (*args_len + 1));
  
@@ -333,12 +334,12 @@ parse_search_string(bozo_httpreq_t *request, const char *query, size_t *args_len
 
 parse_err:
 
-	free (*args);
 	free (str);
-	*args = NULL;
+	free (*args);
+	free(args);
 	*args_len = 0;
 
-	return 0;
+	return NULL;
 
 }
 
